--- a/admin/assets/css/now-ui-dashboard.css
+++ b/admin/assets/css/now-ui-dashboard.css
@@ -3076,6 +3076,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 img {
   max-width: 100%;
   border-radius: 0.1875rem;
+  margin: 0 auto;
 }
 
 .img-raised {
